# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  README.md  graphs.ipynb  ryzen5-4500u.ipynb  scrambled_cube.txt
src/: Cube.cpp  Cube.hpp  Solver.cpp  Solver.hpp  Timer.hpp  main.cpp
